fix: :bug: fixed some issue with dark mode

--- a/src/output.css
+++ b/src/output.css
@@ -295,6 +295,9 @@
   .h-full {
     height: 100%;
   }
+  .h-screen {
+    height: 100vh;
+  }
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
